--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!--Enter Your Name Here in this Comment Tag-->
+        <!-- Jerhemy Waldon -->
         <title>Amelie Boulangerie</title>
         <meta charset="utf-8">
     </head>
@@ -30,11 +30,11 @@
                 <section>
                     <h3>Contact Amelie Boulangerie</h3>
                     <address>
-                    Amelie Boulangerie<br>
-                    231 University Drive<br>
-                    Tempe, AZ 85281<br>
-                    480-555-5555<br>
-                    Hours: Mon-Sun, 6am-9pm<br>
+                        Amelie Boulangerie<br>
+                        231 University Drive<br>
+                        Tempe, AZ 85281<br>
+                        480-555-5555<br>
+                        Hours: Mon-Sun, 6am-9pm<br>
                     </address>
                 </section>
             </section>
